[package]
name = "blackjack-optimizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-ordinalize = "3.1.12"
itertools = "0.10.5"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
signifix = "0.10.1"
thiserror = "1.0.38"
toml = "0.7.1"
